tests/errors/cLayoutNoSuchField.milo
// @error: a declaration does not match the C header it claims to describe
// Naming a field C doesn't have makes offsetof itself ill-formed. Apple Clang and
// GCC phrase the underlying error differently, so assert Milo's stable wrapper.
@cLayout("struct timespec", "time.h")
extern struct T {
    tv_sec: i64,
    bogusField: i64,
}

fn main() {
    print(sizeOf<T>())
}
